# printer-keystone

./: .gitignore  README.md  analyze.sh  generate.sh  pyproject.toml  verify.sh
printer_keystone/: analyze.py  cli.py  fiducials.py  generate.py  io.py  paper.py  vision.py
tests/: test_paper.py  test_similarity_math.py
